[package]
name = "chatty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.26", features = [ "full" ] }
tokio-stream = { version = "0.1", features = [ "net" ] }
anyhow = "1"
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
regex = "1"